--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,19 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.20.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "prisma": "^5.19.1"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.20.0"
   }
 }
