--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-router": "^5.1.20",
+    "axios": "^1.7.7",
     "browser-router": "^0.2.0",
     "react": "^18.2.0",
     "react-browser-router": "^2.1.2",
