--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/react-router": "^5.1.20",
     "axios": "^1.7.7",
-    "browser-router": "^0.2.0",
     "react": "^18.2.0",
-    "react-browser-router": "^2.1.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
