--- a/backend/package.json
+++ b/backend/package.json
@@ -25,12 +25,14 @@
     "@types/bcrypt": "^5.0.2",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
+    "cloudflare": "^3.5.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^4.68.4",
     "prisma": "^5.20.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
