--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
+    "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@types/node": "^22.8.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
