--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/node": "^22.8.4",
